--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a dbf parser - stream version (based on https://github.com/tamtakoe/node-dbf)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"=> Testing\" && babel-tape-runner test/index.js | tap-spec"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,11 @@
   "homepage": "https://github.com/MichaelQQ/dbfstream#readme",
   "dependencies": {
     "iconv-lite": "^0.4.13"
+  },
+  "devDependencies": {
+    "babel-tape-runner": "^2.0.1",
+    "deep-freeze": "0.0.1",
+    "tap-spec": "^4.1.1",
+    "tape": "^4.6.0"
   }
 }
